# InServiceOfX

./: .config.example  .envExample  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
CUDALibraries/CuLLM/Source/UnitTests/: CMakeLists.txt
CUDALibraries/MoreCUDA/Source/IntegrationTests/: CMakeLists.txt
CUDALibraries/MoreCUDA/Source/UnitTests/: CMakeLists.txt  variable_sizes_tests.cu
CUDALibraries/MoreCUDA/Source/cuBLASWrappers/: CMakeLists.txt  LibraryContextHandle.cu  LibraryContextHandle.h  get_data_precision.h
CppLibraries/LowLevelLibrary/Source/: CMakeLists.txt
CppLibraries/LowLevelLibrary/Source/IPC/: CMakeLists.txt  UDPSocket.cpp  UDPSocket.h
CppLibraries/LowLevelLibrary/Source/IntegrationTests/: CMakeLists.txt
CppLibraries/LowLevelLibrary/Source/UnitTests/: ArbitraryIPAddressSetup.cpp  ArbitraryIPAddressSetup.h  CMakeLists.txt
CppLibraries/LowLevelLibrary/Source/Utilities/: CMakeLists.txt  CaptureCerr.cpp  CaptureCerr.h
MoreCUDA/Source/UnitTests/: CMakeLists.txt  GPUPuzzles_tests.cu  Main.cu
MoreCUDA/Source/UnitTests/DataStructures/: Array_tests.cu
MoreCUDA/Source/UnitTests/Operations/: Arithmetic_tests.cu  dot_product_tests.cu
MoreCUDA/Source/UnitTests/Utilities/: CaptureCerr_tests.cpp  arange_tests.cpp
PythonApplications/BrainSwapChat/: README.md  pyproject.toml  requirements.txt
PythonApplications/BrainSwapChat/Configurations/: groq_client_configuration.yml.example
PythonApplications/BrainSwapChat/brainswapchat/: ApplicationPaths.py  BrainSwapChatApp.py  SetupInternalModules.py  SetupSystemMessages.py  __init__.py  local_streamlit_app.py
PythonApplications/BrainSwapChat/brainswapchat/UI/: ChatInterface.py  GroqModelSelector.py  SidebarManager.py  __init__.py
PythonApplications/BrainSwapChat/tests/: conftest.py
PythonApplications/BrainSwapChat/tests/unit_tests/: test_ApplicationPaths.py
PythonApplications/CLIChat/: README.md  pyproject.toml
PythonApplications/CLIChat/Configurations/: .env.example  clichat_configuration.yml
PythonApplications/CLIChat/Data/: chat_history.txt  chat_history.txt.example  chat_log.txt.example  system_messages.json
PythonApplications/CLIChat/Deployment/: installer.spec
PythonApplications/CLIChat/Deployment/clichat-installer/: install.py
PythonApplications/CLIChat/Executables/: main_Chatbot.py  main_setup.py
PythonApplications/CLIChat/FullStack/: README.md
PythonApplications/CLIChat/FullStack/clichat-saas/: .env.example  README.md
PythonApplications/CLIChat/clichat/: Chatbot.py  StreamingWordWrapper.py  __init__.py
PythonApplications/CLIChat/clichat/Configuration/: CLIChatConfiguration.py  Configuration.py  RuntimeConfiguration.py  __init__.py
PythonApplications/CLIChat/clichat/LLMModel/: GroqAPIInterface.py  __init__.py
PythonApplications/CLIChat/clichat/Persistence/: ChatLogger.py  SystemMessagesManager.py  __init__.py
PythonApplications/CLIChat/clichat/Prompting/: PromptTemplates.py
PythonApplications/CLIChat/clichat/Terminal/: CreateBottomToolbar.py  GroqModelSelector.py  ModelSelector.py  SinglePrompt.py  TerminalModeDialogs.py  __init__.py  create_prompt_session.py  show_system_message_dialog.py
PythonApplications/CLIChat/clichat/Utilities/: ConfigureKeyBindings.py  FileIO.py  Formatting.py  Printing.py  SinglePrompt.py  __init__.py
PythonApplications/CLIChat/executables/: main_Chatbot.py
PythonApplications/CLIChat/tests/TestData/: chat_history.txt  clichat_configuration.yml  empty_system_messages.json
PythonApplications/CLIChat/tests/unit_tests/: conftest.py  test_Chatbot.py  test_StreamingWordWrapper.py
PythonApplications/CLIChatLocal/: pyproject.toml
PythonApplications/CLIChatLocal/Configurations/: embedding_models_configuration.yml.example  from_pretrained_model.yml.example  generation_configuration.yml.example  llama3_configuration.yml.example  llama3_generation_configuration.yml.example  model_list.yml.example  postgresql_configuration.yml.example
PythonApplications/CLIChatLocal/Executables/: main_CLIChatLocal.py
PythonApplications/CLIChatLocal/clichatlocal/: ApplicationPaths.py  CLIChatLocal.py  __init__.py
PythonApplications/CLIChatLocal/clichatlocal/Configuration/: CLIConfiguration.py  ModelList.py  __init__.py
PythonApplications/CLIChatLocal/clichatlocal/Core/: ModelAndConversationManager.py  ModelConversationAndToolsManager.py  ProcessConfigurations.py  ToolsManager.py  __init__.py
PythonApplications/CLIChatLocal/clichatlocal/FileIO/: ApplicationPaths.py  ConversationHistoryFileIO.py  JSONFile.py  SystemMessagesFileIO.py  __init__.py
PythonApplications/CLIChatLocal/clichatlocal/Messages/: MessagesManager.py  SystemMessagesDialogHandler.py  SystemMessagesManager.py  __init__.py
PythonApplications/CLIChatLocal/clichatlocal/Terminal/: CommandHandler.py  ConfirmationDialog.py  PromptSessionManager.py  TerminalUI.py  __init__.py
PythonApplications/CLIVideo/: pyproject.toml
PythonApplications/CLIVideo/Configurations/: .env.example  clivideo_configuration.yml  lumaai_generation_configuration.yml
PythonApplications/CLIVideo/Executables/: main_CLIVideo.py
PythonLibraries/CoreCode/: README.md  pyproject.toml
PythonLibraries/CoreCode/corecode/: __init__.py
PythonLibraries/CoreCode/tests/: conftest.py
PythonLibraries/Embeddings/: pyproject.toml
PythonLibraries/Embeddings/tests/: conftest.py
PythonLibraries/HuggingFace/MoreTransformers/: pyproject.toml
PythonLibraries/MoreComputerVision/: pyproject.toml
PythonLibraries/MoreComputerVision/morecomputervision/: __init__.py  color_conversions.py  load_image_with_diffusers.py
PythonLibraries/MoreComputerVision/tests/: conftest.py
PythonLibraries/ThirdParties/MoreGroq/: README.md  pyproject.toml
PythonLibraries/ThirdParties/MoreInsightFace/: README.md  pyproject.toml
PythonLibraries/ThirdParties/MoreInstantID/: pyproject.toml
PythonLibraries/Tools/: README.md  pyproject.toml
PythonLibraries/Tools/tests/: conftest.py
RustLibraries/docker_builder/: Cargo.toml
RustLibraries/docker_builder/src/: build_docker.rs  configuration.rs  lib.rs  main.rs  run_docker.rs
(+1454 files in other folders)
