[tool.poetry]
name = "brainswapchat"
version = "0.1.0"
description = ""
authors = ["Ernest Yeung <ernestyalumni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.46.0"
python-dotenv = "^1.1.1"
pydantic = "^2.11.7"
groq = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
