[tool.poetry]
name = "embeddings"
version = "0.1.0"
description = ""
authors = ["Ernest Yeung <ernestyalumni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
