[tool.poetry]
name = "morecomputervision"
version = "0.1.0"
description = ""
authors = ["InServiceOfX <inserviceofxy@proton.me>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/InServiceOfX/InServiceOfX"

[tool.poetry.dependencies]
diffusers = "^0.28.0"
python = "^3.10"
opencv="^4.9.0"
opencv-python-headless = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
