[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Ernest Yeung <ernestyalumni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.173.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
