[package]
name = "docker_builder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
nix = { version = "0.30.1", features = ["user"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.24.0"
