[tool.poetry]
name = "moregroq"
version = "0.1.0"
description = ""
authors = ["Ernest Yeung <ernestyalumni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
groq = "^0.13.1"
pydantic = "^2.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
