[tool.poetry]
name = "commonapi"
version = "0.1.0"
description = ""
authors = ["Ernest Yeung <ernestyalumni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.3"
openai = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
