[tool.poetry]
name = "moreinsightface"
version = "0.1.0"
description = "More applications based upon InsightFace"
authors = ["InServiceOfX <inserviceofxy@proton.me>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/InServiceOfX/InServiceOfX"

[tool.poetry.urls]
"Source Code" = "https://github.com/InServiceOfX/InServiceOfX/tree/master/PythonLibraries/ThirdParties/MoreInsightFace"

[tool.poetry.dependencies]
python = "^3.10"
insightface = "^0.7.3"
corecode = { path = "../../CoreCode", develop = true }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
