[package]
name = "more_candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { path = "../../../../../ThirdParty/candle/candle-core", features = ["cuda", "cudnn"]}
candle-nn = { path = "../../../../../ThirdParty/candle/candle-nn", features = ["cuda",]}