[package]
name = "common-api"
version = "0.1.0"
edition = "2024"

[dependencies]
core_code = { path = "../../../core_code" }
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.34"
sha2 = { version = "0.10.9", features = ["std"] }
