[package]
name = "common-api"
version = "0.1.0"
edition = "2024"

[dependencies]
core_code = { path = "../../../core_code" }
reqwest = { version = "0.12.28", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.34"
sha2 = { version = "0.10.9", features = ["std"] }

[[test]]
name = "integration_tests"
path = "tests/integration_tests/mod.rs"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
# Custom test target for mirrored integration tests (not under tests/ to avoid default run in 'cargo test').
# 'cargo test' runs all, including unit/doc tests.
# Run all integration: cargo test --test integration_tests
# Run specific: cargo test <fn> --test integration_tests
# Add more mirrored files/subdirs, update mod.rs with pub mod <name>;
# To just run the "unit tests" that are included directly with the code, run
# cargo test --lib



