[package]
name = "more-xai"
version = "0.1.0"
edition = "2024"

[dependencies]
common-api = { path = "../common-api" }

# Custom test target for mirrored integration tests
# 'cargo test' runs all, including unit/doc tests.
# Run all integration: cargo test --test integration_tests
# Run specific: cargo test <fn> --test integration_tests
# Add more mirrored files/subdirs, update mod.rs with pub mod <name>;
# To just run the "unit tests" that are included directly with the code, run
# cargo test --lib

[[test]]
name = "integration_tests"
path = "tests/integration_tests/mod.rs"
